Collapse-menu onClick bug fixed

--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -27,3 +27,10 @@
         display: none;
     }
 }
+
+/* .collapse .nav-link {
+    &:hover, &:active {
+        background-color: $white;
+        color: $dark;
+    }
+} */
